# mp_web_app

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .projenrc.py  CHANGELOG.md  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt  setup.sh
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
.projen/: deps.json  tasks.json
.qodo/: history.sqlite
.serena/: project.yml
dynamodb_data/: shared-local-instance.db
mp_api/: api.py
mp_api/modules/users/: models.py  routers.py
mp_web_app/backend/: .dockerignore  .env.example  .gitignore  README.md  api.py  app_config.py  constraints.txt  pyproject.toml  requirements.txt  run.py
mp_web_app/backend/.projen/: deps.json  tasks.json
mp_web_app/backend/auth/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/backend/: __main__.py  api.py  example.py
mp_web_app/backend/backend/auth/: exceptions.py  operations.py  routers.py
mp_web_app/backend/backend/database/: db_config.py  operations.py
mp_web_app/backend/backend/mail/: operations.py  routers.py
mp_web_app/backend/backend/users/: models.py  operations.py  routers.py
mp_web_app/backend/database/: db_config.py  exceptions.py  operations.py  repositories.py
mp_web_app/backend/files/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/gallery/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/inquiries/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/inquiries/templates/: inquiry_pdf.html
mp_web_app/backend/mail/: exceptions.py  operations.py  routers.py
mp_web_app/backend/mail/templates/: inquiry_notification.html  news_notification.html  reset_password.html  share_notification.html  upload_notification.html  verification.html
mp_web_app/backend/members/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/middleware/: cache_headers.py
mp_web_app/backend/news/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/products/: exceptions.py  models.py  operations.py  routers.py
mp_web_app/backend/tests/: conftest.py  test_auth_operations.py  test_files_operations.py  test_inquiries_operations.py  test_mail_operations.py  test_members_operations.py  test_news_operations.py  test_products_operations.py  test_users_operations.py
mp_web_app/backend/users/: exceptions.py  models.py  operations.py  roles.py  routers.py
mp_web_app/backend/utils/: decorators.py
mp_web_app/frontend/: .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .prettierignore  .prettierrc.json  README.md  app-config.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
mp_web_app/frontend/.projen/: deps.json  tasks.json
mp_web_app/frontend/components/: README.md  admin-layout.tsx  category-combofield.tsx  confirm-dialog.tsx  expandable-label-cell.tsx  expandable-name-cell.tsx  expandable-size-cell.tsx  files-table.tsx  footer.tsx  forgot-password.tsx  gallery-image-card.tsx  gallery-modal.tsx  header.tsx  label-pill.tsx  labels-combofield.tsx  login-form.tsx  logo.tsx  new-password.tsx  news-card.tsx  page-loading-wrapper.tsx  product-card.tsx  products-table.tsx  register.tsx  role-badge.tsx  share-file-dialog.tsx  table-pagination.tsx  theme-provider.tsx  upload-file.tsx
mp_web_app/frontend/components/ui/: alert-dialog.tsx  aspect-ratio.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  loading-spinner.tsx  navigation-menu.tsx  pagination.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx  toaster.tsx  use-toast.ts
mp_web_app/frontend/context/: AuthContext.tsx  apiClient.ts  jwt.ts  tokenStore.ts
mp_web_app/frontend/hooks/: README.md  useFiles.ts  useGallery.ts  useInquiries.ts  useMembers.ts  useNews.ts  usePagination.ts  useProducts.ts  useUsers.ts
mp_web_app/frontend/lib/: README.md  api.ts  errorUtils.ts  queryClient.ts  styles.ts  tableUtils.ts
mp_web_app/frontend/pages/: Base.tsx  Contacts.tsx  Gallery.tsx  Home.tsx  Layout.tsx  MyDocuments.tsx  Navigation.tsx  Products.tsx  README.md  Unsubscribe.tsx  UploadFile.tsx
mp_web_app/frontend/pages/Documents/: AccountingDocuments.tsx  Forms.tsx  Others.tsx
mp_web_app/frontend/pages/about-us/: Board.tsx  Control.tsx
mp_web_app/frontend/pages/admin/: AdminPanel.tsx  DocumentsManagement.tsx  EmailsManagement.tsx  (+7 more)
mp_web_app/frontend/src/: App.tsx  main.tsx
mp_web_site/: app_config.py
mp_web_site/backend/: api.py  pyproject.toml  run.py
mp_web_site/backend/auth/: models.py  operations.py  routers.py
mp_web_site/backend/database/: db_config.py  operations.py
mp_web_site/backend/mail/: operations.py  routers.py
mp_web_site/backend/modules/users/: models.py  operations.py  roles.py  routers.py
mp_web_site/backend/users/: auth.py  exceptions.py  models.py  operations.py  responses.py  routers.py
mp_web_site/mp_api/: pyproject.toml
mp_web_site/mp_api/database/: db_config.py  operations.py
mp_web_site/mp_api/modules/users/: models.py  operations.py  routers.py
stacks/: README.md  backend_stack.py  frontend_stack.py  uploads_stack.py
tests/: README.md  test_example.py
tests/backend/: conftest.py
tests/backend/auth/: test_operations.py
tests/backend/users/: test_operations.py
(+21 files in other folders)
