[project]
name = "mp-web-app"
version = "0.1.0"
description = "MP Web Site with CDK infrastructure and FastAPI backend"
authors = [
  { name = "Ivan Partsunev", email = "ivan.parcunev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "aws-cdk-lib>=2.176.0,<3.0",
  "constructs>=10.4.2,<11.0",
  "boto3>=1.35.88,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0",
  "pytest-cov>=6.0.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks"]

[tool.uv.workspace]
members = ["mp_web_app/backend"]
