[project]
name = "backend"
version = "0.1.0"
description = "MP Web App Backend API"
authors = [
  { name = "Ivan Partsunev", email = "ivan.parcunev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi>=0.115.6,<0.116",
  "pydantic[email]>=2.10.6,<3.0",
  "pydantic-settings>=2.7.1,<3.0",
  "uvicorn[standard]>=0.34.2,<0.35",
  "mangum>=0.19.0,<0.20",
  "python-jose[cryptography]>=3.4.0,<4.0",
  "argon2-cffi>=23.1.0,<24.0",
  "python-multipart>=0.0.20,<0.1",
  "boto3>=1.35.88,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0",
  "pytest-cov>=6.0.0,<7.0",
  "pytest-mock>=3.14.0,<4.0",
  "httpx>=0.28.1,<0.29",
  "ruff>=0.9.1,<0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth", "database", "files", "gallery", "mail", "news", "users", "utils"]

[tool.ruff]
# Set line length to 120 characters
line-length = 120
# Use 2-space indentation
indent-width = 2
# Target Python 3.12
target-version = "py312"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use 2 spaces for indentation
indent-style = "space"
# Normalize string quotes
skip-magic-trailing-comma = false
# Format docstrings
docstring-code-format = true

[tool.ruff.lint]
# Enable recommended rules + additional best practices
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort (import sorting)
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "PTH",    # flake8-use-pathlib
  "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
  "E501",   # Line too long (handled by formatter)
  "B008",   # Do not perform function calls in argument defaults (FastAPI uses this)
  "UP007",  # Use X | Y for type annotations (keep Optional for clarity)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "*.pyc",
  ".pytest_cache",
  ".ruff_cache",
  "dist",
  "build",
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["auth", "database", "files", "gallery", "mail", "news", "users", "utils"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
  "S101",   # Use of assert
  "ARG",    # Unused function arguments
  "FBT",    # Boolean trap
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--disable-warnings",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
]
