[project]
name = "mp-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ivanparcunev",email = "ivan.parcunev@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.2)",
    "mangum (==0.19.0)",
    "pydantic[email] (==2.11.3)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "pydantic-settings (==2.9.1)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
